Fixes #1252 - Management Bar added `.management-bar-item-xs-inline-block` to display links/buttons inside collapsing navigation inline

--- a/src/scss/lexicon-base/_management-bar.scss
+++ b/src/scss/lexicon-base/_management-bar.scss
@@ -274,6 +274,17 @@
 		margin: 0;
 	}
 
+	.management-bar-item-xs-inline-block {
+		@media (max-width: $grid-float-breakpoint-max) {
+			display: inline-block;
+			vertical-align: top;
+
+			+ .management-bar-item-xs-inline-block {
+				margin-left: -4px;
+			}
+		}
+	}
+
 	> li {
 		@media (min-width: $grid-float-breakpoint) {
 			float: left;
